--- a/draft.tex
+++ b/draft.tex
@@ -360,16 +360,16 @@ bound queries (Is this alternative among your top-k most preferred items?), comp
 
 \section{Proof of completion}
 \label{sec:prfCompl}
-Given $w$ and ${\pref} \in C(\ppref)$, let $w[\pref]$ denote $w_{|\pref(y)|} - w_{|\pref(x)|}$. \commentOC{Changing the notation to slightly to reduce the number of symbols, to be discussed.} Define ${\pref} \in m_w$ iff ${\pref} \in C(\ppref)$ and $\forall {\pref'} \in C(\ppref): w[\pref] \geq w[\pref']$.
+Given $w$ and ${\pref} \in C(\ppref)$, let $w[\pref]$ denote $w_{|\pref(y)|} - w_{|\pref(x)|}$. \commentOC{Changing the notation to slightly reduce the number of symbols, to be discussed.}
 
-Given $w$ and $\pref$ an element of $C(\ppref)$. Consider $C = \{c \pinc x \land x \pref c\}$. Define $\pref^1$ as $\pref$ except that the elements in $C$ come just above $x$ in $\pref^1$, respecting in $\pref^1$ their internal ordering in $\pref$. We show that $\pref^1$ is an element of $C(\ppref)$; and that $w[\pref^1] \geq w[\pref]$. 
+Given ${\pref} \in C(\ppref)$, define $\pref^1$ as $\pref$ except that the elements in $C = \{c \pinc x \land x \pref c\}$ come just above $x$ in $\pref^1$, respecting in $\pref^1$ their internal ordering in $\pref$. We show first that $\pref^1$ is an element of $C(\ppref)$; and second that $\forall w: w[\pref^1] \geq w[\pref]$. 
 
-It is an element of $C(\ppref)$ as it does not contradict $\ppref$. To show this, recall first that $\pref$ does not contradict $\ppref$. Left to show is that $\forall c \in C, d \notin C: x \pref d \pref c \Rightarrow d \pinc c$ (thus any element $d$ whose relation with $c$ has changed from $\pref$ to $\pref^1$ were incomparable with $c$ in $\ppref$). Consider any such pair $c, d$. As $d \notin C$, $\lnot(d \pinc x)$ or $d \pref x$. From the hypothesis, $d \pref x$ is excluded. 
+First, it is an element of $C(\ppref)$ as it does not contradict $\ppref$. To show this, recall first that $\pref$ does not contradict $\ppref$. Left to show is that $\forall c \in C, d \notin C: x \pref d \pref c \Rightarrow d \pinc c$ (thus any element $d$ whose relation with $c$ has changed from $\pref$ to $\pref^1$ were incomparable with $c$ in $\ppref$). Consider any such pair $c, d$. As $d \notin C$, $\lnot(d \pinc x)$ or $d \pref x$. From the hypothesis, $d \pref x$ is excluded. 
 As $\pref$ extends $\ppref$, $\lnot(d \ppref x)$ and $\lnot (c \ppref d)$. Because $\lnot (d \pinc x)$, $x \ppref d$. Thus, $\lnot (d \ppref c)$, otherwise by transitivity $x \ppref c$. The conclusion now follows from $\lnot (c \ppref d)$ and $\lnot (d \ppref c)$.
 
-In $\pref^1$, compared to $\pref$, $x$ is $|C|$ positions lower, and $y$ is at most $|C|$ positions lower, depending on where $y$ was in $\pref$. Hence, by convexity of the weights, $w[\pref^1] \geq w[\pref]$.
+Second, in $\pref^1$, compared to $\pref$, $x$ is $|C|$ positions lower, and $y$ is at most $|C|$ positions lower, depending on where $y$ was in $\pref$. Hence, by convexity of the weights, $w[\pref^1] \geq w[\pref]$.
 
-Now define $\pref^2$ as $\pref^1$ except that the elements from $C' = \{c \pinc y \land \lnot (c \pref^1 x \pref^1 y) \land c \pref^1 y\}$ move just below $y$, respecting in $\pref^2$ their internal ordering in $\pref^1$. Observe that this move keeps property (1), that was satisfied by construction in $\pref^1$, intact, and satisfies property (2). The rest of the reasoning is similar to the previous move, as the situations are symmetric. (To be checked?) Hence, $\pref^2 \in C(\pref)$ and it satisfies both properties.
+Now define $\pref^2$ as $\pref^1$ except that the elements from $C' = \{c \pinc y \land \lnot (c \pref^1 x \pref^1 y) \land c \pref^1 y\}$ move just below $y$, respecting in $\pref^2$ their internal ordering in $\pref^1$. Observe that this move keeps property (1), that was satisfied by construction in $\pref^1$, intact, and satisfies property (2). The rest of the reasoning is similar to the previous move, as the situations are symmetric. (To be checked?) Hence, ${\pref^2} \in C(\pref)$ and it satisfies both properties.
 
 Given any $x, y, w$, as $C(\pref)$ has an element maximizing $w[.]$ (by finiteness of the set), the above reasoning shows that some element in $C(\pref)$ satisfies both properties and maximizes $w[.]$. And any element in $C(\pref)$ satisfying both properties attribute the same positions to $x$ and $y$, thus, maximizes $w[.]$.
 \end{document}  
